k8s/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - sb.dubrovskih.ru
      secretName: sb-tls
  rules:
    - host: sb.dubrovskih.ru
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: bot-api
                port:
                  number: 8080
